# vibecheck

./: .gitignore  MOBILE_APP_SCOPE.md  README.md
agent/: .env.example  agent.py  pyproject.toml  railway.toml  server.py  tmpclaude-4f17-cwd
agent/processors/: __init__.py  face_processor.py  take_tracker.py  vibe_processor.py
agent/prompts/: bestie_mode.md  director_mode.md  roast_mode.md
agent/tools/: __init__.py  caption_generator.py  session.py
frontend/: README.md  eslint_errors.json  index.html  package-lock.json  package.json  tmpclaude-6af1-cwd
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ModeSelector.tsx  ResultsScreen.tsx  TopicInput.tsx  VibeSession.tsx
frontend/src/components/results/: DirectorsCutAnalysis.tsx  ResultsMetrics.tsx  ResultsScreen.tsx  ResultsVideoPlayer.tsx
frontend/src/components/session/: DirectorSidebar.tsx  SessionControls.tsx  VibeSession.tsx  VideoFeed.tsx
frontend/src/hooks/: useLiveStats.ts  useRecording.ts  useSessionResults.ts  useStreamCall.ts
frontend/src/lib/: utils.ts
frontend/src/types/: session.ts
